RFQ API: add bulk quotes endpoint (#2846)
